--- a/website/src/pages/docs/data/subscriptions.mdx
+++ b/website/src/pages/docs/data/subscriptions.mdx
@@ -80,8 +80,7 @@ Because subscriptions maintain a persistent connection, they can't use the defau
 that Apollo Client uses for queries and mutations. Instead, Apollo Client subscriptions most
 commonly communicate over WebSocket.
 
-Install the community-maintained
-[`graphql-ws`](https://github.com/enisdenjo/graphql-ws) library.
+Install the community-maintained [`graphql-ws`](https://github.com/enisdenjo/graphql-ws) library.
 
 ```sh
 npm install graphql-ws
@@ -90,24 +89,24 @@ npm install graphql-ws
 Let's look at how to add support for this transport to Apollo Client.
 
 ```ts
-import { GraphQLWsLink } from "@apollo/client/link/subscriptions";
-import { createClient } from "graphql-ws";
+import { createClient } from 'graphql-ws';
+import { GraphQLWsLink } from '@apollo/client/link/subscriptions';
 
 const ws = new GraphQLWsLink(
   createClient({
-    url: "ws://localhost:3000/graphql"
-  })
+    url: 'ws://localhost:3000/graphql',
+  }),
 );
 ```
 
 ```ts
-import { type ApolloClientOptions, InMemoryCache, split } from "@apollo/client/core";
-import { GraphQLWsLink } from "@apollo/client/link/subscriptions";
-import { getMainDefinition } from "@apollo/client/utilities";
-import { APOLLO_OPTIONS } from "apollo-angular";
-import { HttpLink } from "apollo-angular/http";
-import { Kind, OperationTypeNode } from "graphql";
-import { createClient } from "graphql-ws";
+import { APOLLO_OPTIONS } from 'apollo-angular';
+import { HttpLink } from 'apollo-angular/http';
+import { Kind, OperationTypeNode } from 'graphql';
+import { createClient } from 'graphql-ws';
+import { InMemoryCache, split, type ApolloClientOptions } from '@apollo/client/core';
+import { GraphQLWsLink } from '@apollo/client/link/subscriptions';
+import { getMainDefinition } from '@apollo/client/utilities';
 
 @NgModule({
   providers: [
@@ -122,8 +121,8 @@ import { createClient } from "graphql-ws";
         // Create a WebSocket link:
         const ws = new GraphQLWsLink(
           createClient({
-            url: "ws://localhost:3000/graphql"
-          })
+            url: 'ws://localhost:3000/graphql',
+          }),
         );
 
         // Using the ability to split links, you can send data to each link
@@ -131,14 +130,14 @@ import { createClient } from "graphql-ws";
         const link = split(
           // Split based on operation type
           ({ query }) => {
-              const definition = getMainDefinition(query);
-              return (
-                definition.kind === Kind.OPERATION_DEFINITION &&
-                definition.operation === OperationTypeNode.SUBSCRIPTION
-              );
-            },
-            ws,
-            http
+            const definition = getMainDefinition(query);
+            return (
+              definition.kind === Kind.OPERATION_DEFINITION &&
+              definition.operation === OperationTypeNode.SUBSCRIPTION
+            );
+          },
+          ws,
+          http,
         );
 
         return {
