--- a/website/src/pages/docs/data/subscriptions.mdx
+++ b/website/src/pages/docs/data/subscriptions.mdx
@@ -99,58 +99,47 @@ const ws = new GraphQLWsLink(
 );
 ```
 
-```ts
-import { APOLLO_OPTIONS } from 'apollo-angular';
+```ts filename="graphql.provider.ts"
 import { HttpLink } from 'apollo-angular/http';
 import { Kind, OperationTypeNode } from 'graphql';
 import { createClient } from 'graphql-ws';
-import { InMemoryCache, split, type ApolloClientOptions } from '@apollo/client/core';
+import { inject } from '@angular/core';
+import { ApolloClientOptions, InMemoryCache, split } from '@apollo/client/core';
 import { GraphQLWsLink } from '@apollo/client/link/subscriptions';
 import { getMainDefinition } from '@apollo/client/utilities';
-
-@NgModule({
-  providers: [
-    {
-      provide: APOLLO_OPTIONS,
-      useFactory(httpLink: HttpLink): ApolloClientOptions<unknown> {
-        // Create an http link:
-        const http = httpLink.create({
-          uri: 'http://localhost:3000/graphql',
-        });
-
-        // Create a WebSocket link:
-        const ws = new GraphQLWsLink(
-          createClient({
-            url: 'ws://localhost:3000/graphql',
-          }),
-        );
-
-        // Using the ability to split links, you can send data to each link
-        // depending on what kind of operation is being sent
-        const link = split(
-          // Split based on operation type
-          ({ query }) => {
-            const definition = getMainDefinition(query);
-            return (
-              definition.kind === Kind.OPERATION_DEFINITION &&
-              definition.operation === OperationTypeNode.SUBSCRIPTION
-            );
-          },
-          ws,
-          http,
-        );
-
-        return {
-          link,
-          cache: new InMemoryCache(),
-          // ... Options
-        };
-      },
-      deps: [HttpLink],
+function apolloOptionsFactory(): ApolloClientOptions<any> {
+  const httpLink = inject(HttpLink);
+  tp link:
+  const http =
+  const http = httpLink.create({ uri: 'http://localhost:3000/graphql' });
+  Socket link:
+  const ws = n
+  const ws = new GraphQLWsLink(createClient({ url: 'ws://localhost:3000/graphql' }));
+  ility to split links, you can send data to each link
+  // depending
+   what kind of operation is being sent
+  const link =
+  const link = split(
+    on operation type
+    ({query})
+    ({ query }) => {
+      const definition = getMainDefinition(query);
+      return (
+        definition.kind === Kind.OPERATION_DEFINITION &&
+        definition.operation === OperationTypeNode.SUBSCRIPTION
+      );
     },
-  ],
-})
-class AppModule {}
+    ws,
+
+    http,
+  );
+  return {
+    link,
+    cache: new InMemoryCache(), s ...
+  };
+}
+  };
+}
 ```
 
 Now, queries and mutations will go over HTTP as normal, but subscriptions will be done over the
