--- a/website/src/pages/docs/data/network.mdx
+++ b/website/src/pages/docs/data/network.mdx
@@ -20,26 +20,24 @@ easier testing.
 
 ## Usage
 
-```ts
-import { APOLLO_OPTIONS, ApolloModule } from 'apollo-angular';
+```ts filename="graphql.provider.ts"
+import { Apollo, APOLLO_OPTIONS } from 'apollo-angular';
 import { HttpLink } from 'apollo-angular/http';
-
-@NgModule({
-  imports: [ApolloModule],
-  providers: [
-    {
-      provide: APOLLO_OPTIONS,
-      useFactory(httpLink: HttpLink) {
-        return {
-          // other options
-          link: httpLink.create({ uri: '/graphql' }),
-        };
-      },
-      deps: [HttpLink],
-    },
-  ],
-})
-class AppModule {}
+import { inject, Provider } from '@angular/core';
+import { ApolloClientOptions, InMemoryCache } from '@apollo/client/core';
+function apolloOptionsFactory(): ApolloClientOptions<any> {
+  const httpLink = inject(HttpLink);
+  return {
+    link: httpLink.create({ uri: '/graphql' }),
+    cache: new InMemoryCache(), options ...
+  };
+}
+  };
+}
+export const graphqlProvider: Provider = [
+  Apollo,
+  { provide: APOLLO_OPTIONS, useFactory: apolloOptionsFactory },
+];
 ```
 
 ## `HttpClient`
@@ -68,7 +66,7 @@ or just not to send a query, disable `includeQuery`.
 ## Context
 
 The HTTP Link uses the `headers` field on the context to allow passing headers to the HTTP request.
-It also supports the `withCredentials` field for defining credentials policy for request. These
+It also supports the `withCredentials` field for defining credential policy for request. These
 options will override the same key if passed when creating the link. If some setting is different
 from the one in Options, this one will be used.
 
@@ -83,30 +81,9 @@ from the one in Options, this one will be used.
 | useMultipart      | boolean     | as in options | false    |
 
 ```ts
-import { APOLLO_OPTIONS } from 'apollo-angular';
-import { HttpLink } from 'apollo-link/http';
-import { HttpClientModule } from '@angular/common/http';
-import { InMemoryCache } from '@apollo/client/core';
+import { HttpHeaders } from '@angular/common/http';
 
-@NgModules({
-  imports: [ApolloModule, HttpClientModule],
-  providers: [
-    {
-      provide: APOLLO_OPTIONS,
-      useFactory(httpLink: HttpLink) {
-        return {
-          link: httpLink.create({ uri: '/graphql' }),
-          cache: new InMemoryCache(),
-        };
-      },
-      deps: [HttpLink],
-    },
-  ],
-})
-class AppModule {}
-
-// a query with apollo-angular
-// somewhere in Component
+// a query with apollo-angular somewhere in a component
 apollo.query({
   query: MY_QUERY,
   context: {
@@ -118,32 +95,57 @@ apollo.query({
 
 ### Uri as Function
 
-```ts
-@NgModules({
-  imports: [ApolloModule, HttpClientModule],
-  providers: [
-    {
-      provide: APOLLO_OPTIONS,
-      useFactory(httpLink: HttpLink) {
-        return {
-          link: httpLink.create({
-            uri(operation) {
-              return operation.operationName === 'login' ? '/auth' : '/graphq';
-            },
-          }),
-          cache: new InMemoryCache(),
-        };
+```ts filename="graphql.provider.ts"
+import { HttpLink } from 'apollo-angular/http';
+import { inject } from '@angular/core';
+import { ApolloClientOptions, InMemoryCache } from '@apollo/client/core';
+function apolloOptionsFactory(): ApolloClientOptions<any> {
+  const httpLink = inject(HttpLink);
+  return {
+    link: httpLink.create({
+      uri(operation) {
+        return operation.operationName === 'login' ? '/auth' : '/graphq';
       },
-      deps: [HttpLink],
-    },
-  ],
-})
-class AppModule {}
+    }),
+    cache: new InMemoryCache(), r options ...
+  };
+}
+  };
+}
 ```
 
 ### File Upload
 
-In order to upload a file, you need to turn on `useMultipart` flag:
+To upload a file, you need to add a dependency:
+
+```sh npm2yarn
+npm i extract-files
+```
+
+Then configure the `extractFiles` function:
+
+```ts filename="graphql.provider.ts"
+import { HttpLink } from 'apollo-angular/http';
+import extractFiles from 'extract-files/extractFiles.mjs';
+import isExtractableFile from 'extract-files/isExtractableFile.mjs';
+import { inject } from '@angular/core';
+import { ApolloClientOptions, InMemoryCache } from '@apollo/client/core';
+function apolloOptionsFactory(): ApolloClientOptions<any> {
+  const httpLink = inject(HttpLink);
+  return {
+    link: httpLink.create({
+      uri: '/graphql',
+      extractFiles: body => extractFiles(body, isExtractableFile),
+         })
+    }),
+    cache: new InMemoryCache(), r options ...
+  };
+}
+  };
+}
+```
+
+And finally turn on the `useMultipart` flag:
 
 ```ts
 apollo.query({
@@ -154,105 +156,59 @@ apollo.query({
 });
 ```
 
-You also have to define `extractFiles` function:
-
-```ts
-import extractFiles from 'extract-files/extractFiles.mjs';
-import isExtractableFile from 'extract-files/isExtractableFile.mjs';
-
-// the import depends on the version of `extract-files`
-
-@NgModules({
-  imports: [ApolloModule, HttpClientModule],
-  providers: [
-    {
-      provide: APOLLO_OPTIONS,
-      useFactory(httpLink: HttpLink) {
-        return {
-          link: httpLink.create({
-            uri: '/graphql',
-            extractFiles: body => extractFiles(body, isExtractableFile), // <-
-          }),
-          cache: new InMemoryCache(),
-        };
-      },
-      deps: [HttpLink],
-    },
-  ],
-})
-class AppModule {}
-```
-
 ### Middleware
 
-```ts
+```ts filename="graphql.provider.ts"
 import { HttpLink } from 'apollo-angular/http';
-import { ApolloLink } from '@apollo/client/core';
-
-@NgModules({
-  imports: [ApolloModule, HttpClientModule],
-  providers: [
-    {
-      provide: APOLLO_OPTIONS,
-      useFactory(httpLink: HttpLink) {
-        const http = httpLink.create({ uri: '/graphql' });
-        const middleware = new ApolloLink((operation, forward) => {
-          operation.setContext({
-            headers: new HttpHeaders().set(
-              'Authorization',
-              `Bearer ${localStorage.getItem('token') || null}`,
-            ),
-          });
-          return forward(operation);
-        });
-
-        const link = middleware.concat(http);
-
-        return {
-          link,
-          cache: new InMemoryCache(),
-        };
-      },
-      deps: [HttpLink],
-    },
-  ],
-})
-class AppModule {}
+import { HttpHeaders } from '@angular/common/http';
+import { inject } from '@angular/core';
+import { ApolloClientOptions, ApolloLink, InMemoryCache } from '@apollo/client/core';
+function apolloOptionsFactory(): ApolloClientOptions<any> {
+  const httpLink = inject(HttpLink);
+  const http = httpLink.create({ uri: '/graphql' });
+  const middleware = new ApolloLink((operation, forward) => {
+    operation.setContext({
+      headers: new HttpHeaders().set(
+        'Authorization',
+        `Bearer ${localStorage.getItem('token') || null}`,
+      ),
+    });
+    return forward(operation);
+  });
+  const link = middleware.concat(http);
+  return {
+    link,
+    cache: new InMemoryCache(), options ...
+  };
+}
+  };
+}
 ```
 
 ### Afterware (error)
 
-```ts
+```ts filename="graphql.provider.ts"
 import { HttpLink } from 'apollo-angular/http';
-import { ApolloLink } from '@apollo/client/core';
+import { inject } from '@angular/core';
+import { ApolloClientOptions, InMemoryCache } from '@apollo/client/core';
 import { onError } from '@apollo/client/link/error';
-import { Auth } from './auth.service';
-
-@NgModules({
-  imports: [ApolloModule, HttpClientModule],
-  providers: [
-    {
-      provide: APOLLO_OPTIONS,
-      useFactory(httpLink: HttpLink) {
-        const http = httpLink.create({ uri: '/graphql' });
-        const error = onError(({ networkError }) => {
-          if (networkError.status === 401) {
-            auth.logout();
-          }
-        });
-
-        const link = error.concat(http);
-
-        return {
-          link,
-          cache: new InMemoryCache(),
-        };
-      },
-      deps: [HttpLink],
-    },
-  ],
-})
-class AppModule {}
+function apolloOptionsFactory(): ApolloClientOptions<any> {
+  const httpLink = inject(HttpLink);
+  const myAuthService = inject(MyAuthService);
+  const http = httpLink.create({ uri: '/graphql' });
+  const error = onError(({ networkError }) => {
+    if (networkError && 'statusCode' in networkError && networkError.statusCode === 401) {
+      myAuthService.logout();
+    }
+  });
+  const link = error.concat(http);
+  return {
+    link,
+    cache: new InMemoryCache(), options ...
+  };
+}
+  };
+}
 ```
 
 ## `HttpBatchLink`
@@ -261,25 +217,19 @@ An Apollo Link to combine multiple GraphQL operations into single HTTP request.
 
 ### Usage
 
-```ts
+```ts filename="graphql.provider.ts"
 import { HttpBatchLink } from 'apollo-angular/http';
-
-@NgModule({
-  imports: [ApolloModule],
-  providers: [
-    {
-      provide: APOLLO_OPTIONS,
-      useFactory(httpLink: HttpBatchLink) {
-        return {
-          // other options
-          link: httpLink.create({ uri: '/graphql' }),
-        };
-      },
-      deps: [HttpBatchLink],
-    },
-  ],
-})
-class AppModule {}
+import { inject } from '@angular/core';
+import { ApolloClientOptions, InMemoryCache } from '@apollo/client/core';
+function apolloOptionsFactory(): ApolloClientOptions<any> {
+  const httpBatchLink = inject(HttpBatchLink);
+  return {
+    link: httpBatchLink.create({ uri: '/graphql' }),
+    cache: new InMemoryCache(), r options ...
+  };
+}
+  };
+}
 ```
 
 ### `HttpClient`
