--- a/website/src/pages/docs/performance/server-side-rendering.mdx
+++ b/website/src/pages/docs/performance/server-side-rendering.mdx
@@ -23,45 +23,27 @@ You can use one or both of these techniques to provide a better user experience.
 
 Before we dive more into SSR, let's create an example to work on.
 
-```ts
-// Angular
-// Apollo
-import { APOLLO_OPTIONS, ApolloModule } from 'apollo-angular';
+```ts filename="graphql.provider.ts"
+import { Apollo, APOLLO_OPTIONS } from 'apollo-angular';
 import { HttpLink } from 'apollo-angular/http';
-import { HttpClientModule } from '@angular/common/http';
-import { InjectionToken, NgModule } from '@angular/core';
-import { BrowserModule, BrowserTransferStateModule } from '@angular/platform-browser';
-import { InMemoryCache } from '@apollo/client/core';
-
+import { inject, InjectionToken, Provider } from '@angular/core';
+import { ApolloClientOptions, InMemoryCache } from '@apollo/client/core';
 const APOLLO_CACHE = new InjectionToken<InMemoryCache>('apollo-cache');
-
-@NgModule({
-  imports: [
-    // ...
-    BrowserModule,
-    BrowserTransferStateModule,
-    ApolloModule,
-    HttpClientModule,
-  ],
-  providers: [
-    {
-      provide: APOLLO_CACHE,
-      useValue: new InMemoryCache(),
-    },
-    {
-      provide: APOLLO_OPTIONS,
-      useFactory(httpLink: HttpLink, cache: InMemoryCache) {
-        return {
-          link: httpLink.create({ uri: '/graphql' }),
-          cache,
-        };
-      },
-      deps: [HttpLink, APOLLO_CACHE],
-    },
-  ],
-  // ...
-})
-class AppModule {}
+function apolloOptionsFactory(): ApolloClientOptions<any> {
+  const httpLink = inject(HttpLink);
+  const cache = inject(APOLLO_CACHE);
+  return {
+    link: httpLink.create({ uri: '/graphql' }),
+    cache: cache, options ...
+  };
+}
+  };
+}
+export const graphqlProvider: Provider = [
+  Apollo,
+  { provide: APOLLO_CACHE, useValue: new InMemoryCache() },
+  { provide: APOLLO_OPTIONS, useFactory: apolloOptionsFactory },
+];
 ```
 
 ## Server-Side Rendering
@@ -89,57 +71,35 @@ since the data is "dehydrated" when it is serialized and included in the initial
 For example, a typical approach is to use `TransferState` and `BrowserTransferStateModule` so you
 can then rehydrate the client using the initial state passed from the server:
 
-```ts
-// Angular
-// Apollo
-import { APOLLO_OPTIONS } from 'apollo-angular';
+```ts filename="graphql.provider.ts"
 import { HttpLink } from 'apollo-angular/http';
-import { HttpClientModule } from '@angular/common/http';
-import { InjectionToken, NgModule } from '@angular/core';
-import { BrowserModule, makeStateKey, TransferState } from '@angular/platform-browser';
-import { InMemoryCache } from '@apollo/client/core';
-
+import { inject, InjectionToken, makeStateKey, TransferState } from '@angular/core';
+import { ApolloClientOptions, InMemoryCache, NormalizedCacheObject } from '@apollo/client/core';
 const APOLLO_CACHE = new InjectionToken<InMemoryCache>('apollo-cache');
-const STATE_KEY = makeStateKey<any>('apollo.state');
-
-@NgModule({
-  imports: [
-    // ...
-    BrowserModule,
-    HttpClientModule,
-  ],
-  providers: [
-    {
-      provide: APOLLO_CACHE,
-      useValue: new InMemoryCache(),
-    },
-    {
-      provide: APOLLO_OPTIONS,
-      useFactory(httpLink: HttpLink, cache: InMemoryCache, transferState: TransferState) {
-        const isBrowser = transferState.hasKey<any>(STATE_KEY);
-
-        if (isBrowser) {
-          const state = transferState.get<any>(STATE_KEY, null);
-          cache.restore(state);
-        } else {
-          transferState.onSerialize(STATE_KEY, () => {
-            return cache.extract();
-          });
-          // Reset cache after extraction to avoid sharing between requests
-          cache.reset();
-        }
-
-        return {
-          link: httpLink.create({ uri: '/graphql' }),
-          cache,
-        };
-      },
-      deps: [HttpLink, APOLLO_CACHE, TransferState],
-    },
-  ],
-  // ...
-})
-class AppModule {}
+const STATE_KEY = makeStateKey<NormalizedCacheObject>('apollo.state');
+function apolloOptionsFactory(): ApolloClientOptions<any> {
+  const httpLink = inject(HttpLink);
+  const cache = inject(APOLLO_CACHE);
+  const transferState = inject(TransferState);
+  const isBrowser = transferState.hasKey(STATE_KEY);
+  if (isBrowser) {
+    const state = transferState.get(STATE_KEY, {});
+    cache.restore(state);
+  } else {
+    transferState.onSerialize(STATE_KEY, () => {
+      const result = cache.extract();
+      t cache after extraction to avoid sharing between requests
+      cache.reset();
+      return result;
+    });
+  }
+  return {
+    link: httpLink.create({ uri: '/graphql' }),
+    cache: cache, r options ...
+  };
+}
+  };
+}
 ```
 
 Adding store rehydration to your app is straightforward since Angular itself has a mechanism to
