Functional demo based on Star Wars API

--- a/website/src/pages/docs/data/queries.mdx
+++ b/website/src/pages/docs/data/queries.mdx
@@ -23,8 +23,7 @@ When we are using a basic query, we can use the `Apollo.watchQuery` method in a 
 simply need to parse our query into a GraphQL document using the `gql` tag from `apollo-angular`
 library.
 
-For instance, [in our example](https://graphql-voter-app.herokuapp.com), we want to display a list
-of posts in `Posts` component:
+For instance, in our example, we want to display a list of posts in `Posts` component:
 
 ```ts
 import { Apollo, gql } from 'apollo-angular';
